# django_env_settings

./: README.md  manage.py  pyproject.toml  requirements.txt
loggings/: production.py  staging.py
settings/: asgi.py  env.py  urls.py  wsgi.py
settings/config/: base.py  local.py  production.py  staging.py
