[project]
name = "Basic_Django_Settings"
version = "0.1.0"
description = """General Django Web Application Settings.
This is a general configuration setup for different environments."""
authors = [
    {name = "peter-mbachu",email = "peter.mbachu@avetiumconsult.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.lint.dependencies]
ruff = "^0.14.8"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"